add index links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
 <head>
 	<title>TaSC</title>
 </head>
-<body></body>
+
+
+<body>
+	<h1> Tutor and Student Connection </h1>
+
+	<a href="connect.html"> Find Tutors/Students </a>
+	<a href="forum.html"> Forum </a>
+
+
+
+</body>
 
 
 
