--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1> Tutor and Student Connection </h1>
 
-	<a href="connect.html"> Find Tutors/Students </a>
+	<a href="connect.html"> Find Tutors/Students </a><br>
 	<a href="forum.html"> Forum </a>
 
 
