updated all files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-	<title>TaSC</title>
+	<title>TaSC Login</title>
 	<link href="Resources/index.css" rel="stylesheet" type="text/css"/>
 </head>
 
