--- a/connect.html
+++ b/connect.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<title>TaSC Connections</title>
-	<link href="Resources/index.css" rel="stylesheet" type="text/css"/>
+	<link href="Resources/connect.css" rel="stylesheet" type="text/css"/>
 </head>
 
 
