--- a/forum.html
+++ b/forum.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<title>TaSC Forum</title>
-	<link href="Resources/index.css" rel="stylesheet" type="text/css"/>
+	<link href="Resources/forum.css" rel="stylesheet" type="text/css"/>
 </head>
 
 
