--- a/forum.html
+++ b/forum.html
@@ -11,8 +11,8 @@
 <body>
 	<h1> Tutor and Student Connection </h1>
 
-	<a href="index.html"> Log In </a>
-	<a href="connect.html"> Find Tutors/Students </a><br>
+	<a href="index.html"> Log In </a><br>
+	<a href="connect.html"> Find Tutors/Students </a>
 
 
 
