--- a/connect.html
+++ b/connect.html
@@ -2,21 +2,34 @@
 
 
 <html>
-<head>
-	<title>TaSC Connections</title>
-	<link href="Resources/connect.css" rel="stylesheet" type="text/css"/>
-</head>
+	<head>
+		<title>TaSC Connections</title>
+		<link href="Resources/connect.css" rel="stylesheet" type="text/css"/>
+	</head>
 
 
-<body>
-	<h1> Tutor and Student Connection </h1>
+	<body>
+		<h1> 
+			<a id="forum" href="forum.html"> Discussion Forum </a>
+			<strong id="header"> Tutor and Student Connection </strong>
+		</h1>
 
-	<a href="index.html"> Log In </a><br>
-	<a href="forum.html"> Forum </a>
+
+		<div class="sidebar">
+			<a href="index.html"> Find a Tutor </a> <br>
+			<a href="forum.html"> Find a Student </a>
+		</div>
+
+		<div class="connections">
+			<p>
+				Connections
+			</p>
 
 
 
-</body>
+
+
+	</body>
 
 
 
