--- a/connect.html
+++ b/connect.html
@@ -11,7 +11,8 @@
 	<body>
 		<h1> 
 			<a id="forum" href="forum.html"> Discussion Forum </a>
-			<strong id="header"> Tutor and Student Connection </strong>
+			<div id="header"> Tutor and Student Connection </div>
+			<a id="help" href="help.html"> ? </a>
 		</h1>
 
 
