Better Forum Page
yup

--- a/forum.html
+++ b/forum.html
@@ -3,7 +3,6 @@
 
 <html>
 <head>
-<<<<<<< HEAD
 	<title>TaSC</title>
 	<link href="Resources/forum.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -14,35 +13,23 @@
 
 <body>
 	<div class="sidenav">
-	  <a href="#DS">Data Structures</a>
+	  <a id="ds" href="#DS">Data Structures</a>
 	  <a href="#P1">Physics1</a>
 	</div>
 	<div class="discussion">
 		<ul>
-			<li class="discussion">sup</li>
+			<li class="discussion">Problem with command line:</li>
+			<li class="internalDisc">I was having problems with running the example text.  The command line wont let me fit another argument.  And when I run my code it is giving me an error due to this.  Anyone else having these issues?  If you can help please comment below what to do im lost.</li>
+			<li class="author">-Posted by Anon, 03/23/18</li>
+		</ul>
+
+		<ul>
+			<li class="discussion">Memory Leak:</li>
+			<li class="internalDisc">I deleted all of the initialized heap memory at the end of my code yet I am getting a memory leak, does anyone have any idea what software I could use to get this to work? If so please let me know!  Thanks.</li>
+			<li class="author">-Posted by JJ Stadler, 03/22/18</li>
 		</ul>
 	</div>
-=======
 	<title>TaSC Forum</title>
 	<link href="Resources/forum.css" rel="stylesheet" type="text/css"/>
-</head>
-
-
-<body>
-	<h1> Tutor and Student Connection </h1>
-
-	<a href="index.html"> Log In </a><br>
-	<a href="connect.html"> Find Tutors/Students </a>
-
-
-
-
->>>>>>> 3e41fca9bd874ef56038d5730f18291ab552f948
-</body>
-
-
-
-
-
 
 </html>
