--- a/forum.html
+++ b/forum.html
@@ -13,8 +13,10 @@
 
 <body>
 	<div class="sidenav">
+	  <a href="connect.html">Connect Page</a>
 	  <a id="ds" href="#DS">Data Structures</a>
 	  <a href="#P1">Physics1</a>
+
 	</div>
 	<div class="discussion">
 		<ul>
