help and connect fixes

--- a/connect.html
+++ b/connect.html
@@ -11,8 +11,9 @@
 	<body>
 		<h1> 
 			<a id="forum" href="forum.html"> Discussion Forum </a>
-			<div id="header"> Tutor and Student Connection </div>
-			<a id="help" href="help.html"> ? </a>
+			<div id="header"> Tutor and Student Connection 
+				<a id="help" href="help.html"> ? </a>
+			</div>
 		</h1>
 
 
