--- a/connect.html
+++ b/connect.html
@@ -23,19 +23,42 @@
 		</div>
 
 		<div class="connections">
-			<p>
-				Connections
-			</p>
+			<h2> Connections </h2>
 
 
+			<div class="person">
+				<a href="profile.html">
+					<em> Jason Smith </em>: Student 
+				</a>
+				<p>
+					Course(s): Data Structures
+				</p>
+				<p>
+					Year: Freshman
+				</p>
+				<p>
+					Hi! I'm looking for help with the data structures homeworks because I find them quite challenging. 
+				</p>
+			</div>
+			<br>
+			<div class="person">
+				<a href="profile.html">
+					<em> Alicia Brown </em>: Student 
+				</a>
+				<p>
+					Course(s): Differential Equations, Physics II
+				</p>
+				<p>
+					Year: Sophomore
+				</p>
+				<p>
+					Struggling with math and problem solving concepts.
+				</p>
+			</div>
 
-
+		</div>
 
 	</body>
-
-
-
-
 
 
 </html>
