index.css slight changes

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <label class="field">Username</label>
             <div class="value"><input type="text" size="60" value="" name="new_username" id="new_username"/></div>
             
-            <label class="field">Password</label>
-            <div class="value"><input type="password" size="60" value="" name="new_password" id="new_password"/></div>
+            <label class="field tooltip">Password</label></br>
+            <div class="value tooltip"><span class="righttooltiptext">Your password should be a combination of letters and symbols</span><input type="password" size="60" value="" name="new_password" id="new_password"/></div></br>
             
             <label class="field tooltip">Email Address</label></br>
-            <div class="value tooltip"><span class="tooltiptext"> psst...you should use your RPI email </span><input type="text" size="60" value="" name="new_email" id="new_email"/></div></br>
+            <div class="value tooltip"><span class="bottomtooltiptext"> psst...you should use your RPI email </span><input type="text" size="60" value="" name="new_email" id="new_email"/></div></br>
 
             <label class="field">What Are You?</label>
             <div class="value"><input type="checkbox" size="60" value="I'm a Student!" name="student" id="student"/>I'm a Student!</br></div>
@@ -48,11 +48,6 @@
           </div>
         </fieldset>
       </form>
-
-	<a href="connect.html"> Find Tutors/Students </a><br>
-	<a href="forum.html"> Forum </a>
-
-
 
 </body>
 
