updated css to match

--- a/connect.html
+++ b/connect.html
@@ -10,14 +10,13 @@
 
 	<body>
 		<h1> 
-			<a id="forum" href="forum.html"> Discussion Forum </a>
 			<div id="header"> Tutor and Student Connection 
-				<a id="help" href="help.html"> ? </a>
 			</div>
 		</h1>
 
 
 		<div class="sidebar">
+			<a href="forum.html"> Discussion Forum </a>
 			<a href="index.html"> Find a Tutor </a> <br>
 			<a href="forum.html"> Find a Student </a>
 		</div>
