--- a/connect.html
+++ b/connect.html
@@ -16,9 +16,10 @@
 
 
 		<div class="sidebar">
-			<a href="forum.html"> Discussion Forum </a>
+			<a id="navlink" href="forum.html"> Discussion Forum </a>
 			<a href="index.html"> Find a Tutor </a> <br>
 			<a href="forum.html"> Find a Student </a>
+			<a id="logout" href="index.html"> Logout </a>
 		</div>
 
 		<div class="connections">
