--- a/forum.html
+++ b/forum.html
@@ -6,16 +6,19 @@
 	<title>TaSC</title>
 	<link href="Resources/forum.css" rel="stylesheet" type="text/css"/>
 </head>
-<header>
-	<h1 class="head">TaSC</h1>
-	<!-- <h1 class="question">?</h1> -->
-</header>
+
 
 <body>
+	<h1> 
+		<div id="header"> Tutor and Student Connection 
+		</div>
+	</h1>
+
 	<div class="sidenav">
-	  <a href="connect.html">Connect Page</a>
+	  <a id="navlink" href="connect.html"> Connect Page </a>
 	  <a id="ds" href="#DS">Data Structures</a>
 	  <a href="#P1">Physics1</a>
+	  <a id="logout" href="index.html"> Logout </a>
 
 	</div>
 	<div class="discussion">
