--- a/forum.html
+++ b/forum.html
@@ -13,9 +13,10 @@
 
 <body>
 	<div class="sidenav">
-	  <a href="connect.html">Connect Page</a>
+	  <a id="navlink" href="connect.html">Connect Page</a>
 	  <a id="ds" href="#DS">Data Structures</a>
 	  <a href="#P1">Physics1</a>
+	  <a id="logout" href="index.html"> Logout </a>
 
 	</div>
 	<div class="discussion">
