--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			</div>
 		</fieldset>
 	</form>
+	<button type = "button">Forgot Username?</button>
+	<button type = "button">Forgot Password?</button>
 	<br>
 	<form id="new_user" name="new_user" action="#" method="post" onsubmit="return validate(this);">
         <fieldset> 
