--- a/forum.html
+++ b/forum.html
@@ -14,6 +14,10 @@
 		</div>
 	</h1>
 
+	<div class="makepost"> 
+		<a href="makepost.html"> Make a Post </a>
+	</div>
+
 	<div class="sidenav">
 	  <a id="navlink" href="connect.html">Connect Page</a>
 	  <a id="ds" href="#DS">Data Structures</a>
@@ -34,7 +38,7 @@
 			<li class="author">-Posted by JJ Stadler, 03/22/18</li>
 		</ul>
 	</div>
-	<title>TaSC Forum</title>
-	<link href="Resources/forum.css" rel="stylesheet" type="text/css"/>
+
+
 
 </html>
