--- a/students.html
+++ b/students.html
@@ -17,8 +17,10 @@
 
 		<div class="sidebar">
 			<a id="navlink" href="forum.html"> Discussion Forum </a>
-			<a href="index.html"> Find a Tutor </a> <br>
-			<a href="subjects.html"> Find a Student </a>
+			<a href="index.html"> Calculus </a> <br>
+			<a id="selected" href="forum.html"> Data Structures </a>
+			<a href="index.html"> Differential Equations </a> <br>
+			<a href="index.html"> Physics </a> <br>
 			<a id="logout" href="index.html"> Logout </a>
 		</div>
 
@@ -39,24 +41,40 @@
 				<p>
 					Hi! I'm looking for help with the data structures homeworks because I find them quite challenging. 
 				</p>
+				<a class="connect" href="index.html"> Connect </a>
 			</div>
 			<br>
 			<div class="person">
 				<a href="profile.html">
-					<em> Alicia Brown </em>: Student 
+					<em> Teddy Brookes </em>: Student 
 				</a>
 				<p>
-					Course(s): Differential Equations, Physics II
+					Course(s): Data Structures, Differential Equations
 				</p>
 				<p>
 					Year: Sophomore
 				</p>
 				<p>
-					Struggling with math and problem solving concepts.
+					I'm an engineering major taking data structures for fun, but it was harder than I excpected.
 				</p>
+				<a class="connect" href="index.html"> Connect </a>
 			</div>
 
-		</div>
+				<div class="person">
+				<a href="profile.html">
+					<em> Angela Green </em>: Student 
+				</a>
+				<p>
+					Course(s): Data Structures
+				</p>
+				<p>
+					Year: Freshman
+				</p>
+				<p>
+					I have never used C++ before and could use help on data structures concepts. 
+				</p>
+				<a class="connect" href="index.html"> Connect </a>
+			</div>
 
 	</body>
 
