--- a/connect.html
+++ b/connect.html
@@ -5,6 +5,9 @@
 	<head>
 		<title>TaSC Connections</title>
 		<link href="Resources/connect.css" rel="stylesheet" type="text/css"/>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script type="text/javascript" src="Resources/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="Resources/connect.js"></script>
 	</head>
 
 
