--- a/forum.html
+++ b/forum.html
@@ -5,6 +5,8 @@
 <head>
 	<title>TaSC</title>
 	<link href="Resources/forum.css" rel="stylesheet" type="text/css"/>
+	<script type="text/javascript" src="Resources/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="Resources/forum.js"></script>
 </head>
 
 
@@ -26,7 +28,7 @@
 
 	</div>
 	<div class="discussion">
-		<ul>
+		<!-- <ul>
 			<li class="discussion">Problem with command line:</li>
 			<li class="internalDisc">I was having problems with running the example text.  The command line wont let me fit another argument.  And when I run my code it is giving me an error due to this.  Anyone else having these issues?  If you can help please comment below what to do im lost.</li>
 			<li class="author">-Posted by Anon, 03/23/18</li>
@@ -36,7 +38,7 @@
 			<li class="discussion">Memory Leak:</li>
 			<li class="internalDisc">I deleted all of the initialized heap memory at the end of my code yet I am getting a memory leak, does anyone have any idea what software I could use to get this to work? If so please let me know!  Thanks.</li>
 			<li class="author">-Posted by JJ Stadler, 03/22/18</li>
-		</ul>
+		</ul> -->
 	</div>
 
 
