--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>TaSC Login</title>
 	<link href="Resources/index.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="Resources/index.js"></script>
+    <script type="text/javascript" src="Scripts/index.js"></script>
 </head>
 
 
