--- a/connect.html
+++ b/connect.html
@@ -6,7 +6,7 @@
 		<title>TaSC Connections</title>
 		<link href="Resources/connect.css" rel="stylesheet" type="text/css"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <script type="text/javascript" src="Resources/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="Resources/jquery-1.4.3.min.js"></script>
     <script type="text/javascript" src="Resources/connect.js"></script>
 	</head>
 
@@ -29,35 +29,7 @@
 			<h2> Connections </h2>
 
 
-			<div class="person">
-				<a href="profile.html">
-					<em> Jason Smith </em>: Student 
-				</a>
-				<p>
-					Course(s): Data Structures
-				</p>
-				<p>
-					Year: Freshman
-				</p>
-				<p>
-					Hi! I'm looking for help with the data structures homeworks because I find them quite challenging. 
-				</p>
-			</div>
-			<br>
-			<div class="person">
-				<a href="profile.html">
-					<em> Alicia Brown </em>: Student 
-				</a>
-				<p>
-					Course(s): Differential Equations, Physics II
-				</p>
-				<p>
-					Year: Sophomore
-				</p>
-				<p>
-					Struggling with math and problem solving concepts.
-				</p>
-			</div>
+			<div class="person"></div>
 
 		</div>
 
