--- a/forum.html
+++ b/forum.html
@@ -5,8 +5,8 @@
 <head>
 	<title>TaSC</title>
 	<link href="Resources/forum.css" rel="stylesheet" type="text/css"/>
-	<script type="text/javascript" src="Resources/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="Resources/forum.js"></script>
+	<script type="text/javascript" src="Resources/jquery-1.4.3.min.js"></script>
+    <script type="text/javascript" src="Scripts/forum.js"></script>
 </head>
 
 
@@ -16,18 +16,15 @@
 		</div>
 	</h1>
 
-	<div class="makepost"> 
-		<a href="makepost.html"> Make a Post </a>
-	</div>
-
 	<div class="sidenav">
 	  <a id="navlink" href="connect.html">Connect Page</a>
+	  <a id ="post" href="makepost.html">New Post</a>
 	  <a id="ds" href="#DS">Data Structures</a>
 	  <a href="#P1">Physics1</a>
 	  <a id="logout" href="index.html"> Logout </a>
 
 	</div>
-	<div class="discussion">
+	<div id="discussion">
 		<!-- <ul>
 			<li class="discussion">Problem with command line:</li>
 			<li class="internalDisc">I was having problems with running the example text.  The command line wont let me fit another argument.  And when I run my code it is giving me an error due to this.  Anyone else having these issues?  If you can help please comment below what to do im lost.</li>
