added success signup

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <script type="text/javascript" src="Scripts/index.js"></script>
 </head>
 
-
 <body>
 	<h1> Tutor and Student Connection </h1>
 	<form id="old_user" name="old_user" action="#" method="post" onsubmit="return validateSignIn(this);">
 		<fieldset>
-			<legend>Already a User? Sign In Here!</legend>
+			<legend>Sign in</legend>
 			<div class="formData">
 				
 				<label class="field">Username</label>
