forum.css changes, makepost.html

--- a/makepost.html
+++ b/makepost.html
@@ -16,12 +16,12 @@
 	  <a id="logout" href="index.html"> Logout </a>
 
 	</div>
-	<h1> Tutor and Student Connection </h1>
+	<h1> <div id = "header">Tutor and Student Connection </div></h1>
 	<form id="old_user" name="new_user" action="#" method="post" onsubmit="return validate(this);">
 		<fieldset>
-			<legend>New Post</legend>
+			
 			<div class="formData">
-				
+				<label class="field"><strong>New Post</strong></label></br>
 				<label class="field">Subject</label>
 	            <div class="value"><input type="text" size="60" value="" name="new_username" id="new_username"/></div>
 	            
