--- a/students.html
+++ b/students.html
@@ -41,7 +41,7 @@
 				<p>
 					Hi! I'm looking for help with the data structures homeworks because I find them quite challenging. 
 				</p>
-				<a class="connect" href="index.html"> Connect </a>
+				<button type="submit" id="userid" name="userid"> connect </button>
 			</div>
 			<br>
 			<div class="person">
